Peerslist and Disconnect functionality

--- a/locales/en.json
+++ b/locales/en.json
@@ -722,7 +722,7 @@
     "views.NostrContacts.importContactsError": "Failed to import contacts. Please try again.",
     "views.NostrContacts.nip05Error": "Error fetching NIP-05 profile",
     "views.ContactDetails.saveToContacts": "Save to Contacts",
-    "views.ContactDetails.editAndSaveContact": "Edit and Save Contact",
+    "views.ContactDetails.editAndSaveContact": "Edit and Save Contact", 
     "views.ContactInfo.title": "Contact Info",
     "views.Tools.title": "Tools",
     "views.Tools.developers": "Developers",
@@ -1514,5 +1514,19 @@
     "zeuspay.enableEcash": "Enable ecash",
     "zeuspay.getChannel": "Get channel",
     "androidNotification.lndRunningBackground": "LND is running in the background",
-    "androidNotification.shutdown": "Shutdown"
+    "androidNotification.shutdown": "Shutdown",
+    "views.Peers.title": "Connected Peers",
+    "views.Peers.noPeers": "No connected peers found",
+    "views.Peers.refresh": "Refresh",
+    "views.Peers.disconnectTitle": "Disconnect Peer",
+    "views.Peers.disconnectConfirm": "Are you sure you want to disconnect from this peer?",
+    "views.Peers.disconnectError": "Failed to disconnect from peer",
+    "views.Peers.pingTime": "Ping Time",
+    "views.Peers.satsSent": "Sats Sent",
+    "views.Peers.satsReceived": "Sats Received",
+    "views.Peers.errorLoading": "Error loading peers",
+    "views.Peers.disconnectSuccess": "Peer disconnected successfully",
+    "navigation.peers": "Lightning Peers",
+    "settings.managePeers": "Manage Peers",
+    "views.Settings.peers": "Peers"
 }
