feat: melt tokens to self-custody

--- a/locales/en.json
+++ b/locales/en.json
@@ -1447,6 +1447,9 @@
     "views.Cashu.CashuToken.proofCount": "Number of proofs",
     "views.Cashu.CashuToken.notSupported": "This token has a unit that is not supported",
     "views.Cashu.CashuToken.success": "Successfully imported token",
+    "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
+    "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
+    "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
     "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
     "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
     "stores.CashuStore.startingWallet": "Starting ecash wallet",
@@ -1456,6 +1459,7 @@
     "stores.CashuStore.claimError": "Error claming token",
     "stores.CashuStore.errorMintingToken": "Error minting token",
     "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
+    "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
     "zeuspay.intro.explainer1": "ZEUS Pay is a service that give you a Lightning address, like satoshi@zeuspay.com, for receiving payments to your Lightning wallet.",
     "zeuspay.intro.explainer2": "Below are the kinds of Lightning addresses you can have for your wallet type:",
     "zeuspay.intro.prosAndCons": "Pros and cons",
