feat: Cashu Tools

--- a/locales/en.json
+++ b/locales/en.json
@@ -725,6 +725,9 @@
     "views.ContactInfo.title": "Contact Info",
     "views.Tools.title": "Tools",
     "views.Tools.developers": "Developers",
+    "views.Tools.cashu": "Cashu Tools",
+    "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
+    "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
     "views.Settings.title": "Settings",
