feat: change handle + ZEUS Pay+ views

--- a/locales/en.json
+++ b/locales/en.json
@@ -99,6 +99,7 @@
     "general.invalid": "Invalid",
     "general.createdAt": "Created at",
     "general.expiresAt": "Expires at",
+    "general.expiresOn": "Expires on",
     "general.id": "ID",
     "general.hash": "Hash",
     "general.kind": "Kind",
@@ -1243,6 +1244,7 @@
     "views.Settings.LightningAddress.get0ConfChan": "Get 0-conf channel",
     "views.Settings.LightningAddress.getStandardChan": "Get standard channel",
     "views.Settings.LightningAddress.generateNew": "Generate new pre-images",
+    "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
     "views.Settings.LightningAddressSettings.title": "Lightning address settings",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Automatically accept payments on startup",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Attestation level for automatic acceptance",
@@ -1269,6 +1271,8 @@
     "views.Settings.LightningAddressInfo.invalidAttestationDetails": "Invalid or conflicting attestations. Press to see details.",
     "views.Settings.LightningAddressInfo.noAttestationDetails": "No Nostr attestations found. Sender's wallet likely doesn't support it yet.",
     "views.Settings.LightningAddressInfo.learnAboutZaplocker": "Learn more about Zaplocker",
+    "views.LightningAddress.ZeusPayPlus.subActive": "Subscription Active",
+    "views.LightningAddress.ZeusPayPlus.noActiveSub": "No active subscription",
     "views.Settings.Attestations.title": "Attestations",
     "views.Settings.Attestations.noAttestationsFound": "No attestations found",
     "views.Settings.Attestation.title": "Attestation",
