feat: ZEUS Pay+ web POS

--- a/locales/en.json
+++ b/locales/en.json
@@ -1235,6 +1235,9 @@
     "views.Settings.LightningAddress.statusExplainer2": "More payment hashes will be sent to the server automatically when required, so that you can continue to receive payments.",
     "views.Settings.LightningAddress.generatingPreimages": "Generating preimages",
     "views.Settings.LightningAddress.ChangeAddress": "Change address",
+    "views.Settings.LightningAddress.webPoralPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPoralPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPoralPos.syncSettings": "Sync settings",
     "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
     "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "Warning: changing your Nostr keys will delete your pending payments. Please redeem your pending payments before submitting new keys.",
