ui: replace Proofs w/ Mint Token on Ecash slider

--- a/locales/en.json
+++ b/locales/en.json
@@ -1426,17 +1426,16 @@
     "views.ReceiveEcash.title": "Receive Ecash",
     "views.CashuInvoice.title": "Cashu Invoice",
     "views.CashuPayment.title": "Cashu Payment",
-    "views.Proofs.noProofs": "No proofs",
     "cashu.mint": "Mint",
     "cashu.mints": "Mints",
     "cashu.mintUrl": "Mint URL",
-    "cashu.proofs": "Proofs",
     "cashu.token": "Cashu token",
     "cashu.receivedToken": "Received Cashu token",
     "cashu.sentToken": "Sent Cashu token",
     "cashu.unspentToken": "Unspent Cashu token",
     "cashu.tapToConfigure": "No mints found. Tap to configure",
     "cashu.tapToConfigure.short": "Tap to configure",
+    "cashu.mintToken": "Mint token",
     "cashu.mintEcashToken": "Mint ecash token",
     "cashu.errorAddingMint": "Error adding mint",
     "views.Cashu.AddMint.title": "Add mint",
