feat: NWC ZEUS Pay Lightning address

--- a/locales/en.json
+++ b/locales/en.json
@@ -1231,14 +1231,16 @@
     "views.Settings.LightningAddress.chooseHandle": "Choose a handle",
     "views.Settings.LightningAddress.zaplockerVerification": "Zaplocker verification",
     "views.Settings.LightningAddress.noPaymentsToRedeem": "No payments to redeem. Check back later.",
+    "views.Settings.LightningAddress.noNeedToRedeem": "No redeem step required. Payments are sent directly to your wallet.",
     "views.Settings.LightningAddress.statusExplainer1": "This is the number of payments that can be made to you while you're offline.",
     "views.Settings.LightningAddress.statusExplainer2": "More payment hashes will be sent to the server automatically when required, so that you can continue to receive payments.",
     "views.Settings.LightningAddress.generatingPreimages": "Generating preimages",
     "views.Settings.LightningAddress.ChangeAddress": "Change address",
-    "views.Settings.LightningAddress.webPoralPos": "Web portal: Point of Sale",
-    "views.Settings.LightningAddress.webPoralPos.enableFiat": "Enable fiat pricing",
-    "views.Settings.LightningAddress.webPoralPos.syncSettings": "Sync settings",
+    "views.Settings.LightningAddress.webPortalPos": "Web portal: Point of Sale",
+    "views.Settings.LightningAddress.webPortalPos.enableFiat": "Enable fiat pricing",
+    "views.Settings.LightningAddress.webPortalPos.syncSettings": "Sync settings",
     "views.Settings.LightningAddress.switchToCashu": "Switch to Cashu Lightning address",
+    "views.Settings.LightningAddress.switchToNWC": "Switch to NWC Lightning address",
     "views.Settings.LightningAddress.switchToZaplocker": "Switch to Zaplocker Lightning address",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "Warning: changing your Nostr keys will delete your pending payments. Please redeem your pending payments before submitting new keys.",
     "views.Settings.LightningAddress.explainer1": "To get started with a lightning address you must first have a lightning channel from the ZEUS LSP with inbound liquidity.",
@@ -1248,6 +1250,9 @@
     "views.Settings.LightningAddress.getStandardChan": "Get standard channel",
     "views.Settings.LightningAddress.generateNew": "Generate new pre-images",
     "views.Settings.LightningAddress.upgrade": "Upgrade to ZEUS Pay+",
+    "views.Settings.LightningAddress.changeConnectionString": "Change connection string",
+    "views.Settings.LightningAddress.testConnectionString": "Test connection string",
+    "views.Settings.LightningAddress.connectionTestSuccess": "Connection test successful!",
     "views.Settings.LightningAddressSettings.title": "Lightning address settings",
     "views.Settings.LightningAddressSettings.automaticallyAccept": "Automatically accept payments on startup",
     "views.Settings.LightningAddressSettings.automaticallyAcceptAttestationLevel": "Attestation level for automatic acceptance",
@@ -1463,6 +1468,8 @@
     "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
     "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
     "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
+    "views.LightningAddress.NWC.explainer1": "This is a self-custodial Lightning address that connects to a remote node using Nostr Wallet Connect (NWC).",
+    "views.LightningAddress.NWC.explainer2": "Invoices are created directly on your node. There is no need to redeem the funds; they are available on your remote node immediately.",
     "stores.CashuStore.startingWallet": "Starting ecash wallet",
     "stores.CashuStore.alreadyPaid": "Invoice has already been paid.",
     "stores.CashuStore.alreadySpent": "Token has already been spent.",
