implemented bolt12 withdrawal requests

--- a/locales/en.json
+++ b/locales/en.json
@@ -715,6 +715,13 @@
     "views.Tools.developers": "Developers",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
+    "views.Tools.withdrawal.title": "Withdrawal Request",
+    "views.Tools.withdrawal.amount": "Amount",
+    "views.Tools.withdrawal.description": "Description",
+    "views.Tools.withdrawal.descriptionPlaceholder": "Gift to Zeus",
+    "views.Tools.withdrawal.amountPlaceholder": "100000",
+    "views.Tools.withdrawal.createWithdrawalRequest": "Create withdrawal request",
+    "views.withdrawal.errorCreate": "Error creating withdrawal request",
     "views.Settings.title": "Settings",
     "views.Settings.enabled": "Enabled",
     "views.Settings.disabled": "Disabled",
