--- a/locales/sv.json
+++ b/locales/sv.json
@@ -1024,6 +1024,7 @@
     "views.ActivityFilter.isFailed": "Misslyckade betalningar",
     "views.ActivityFilter.standardInvoices": "Standard invoices",
     "views.ActivityFilter.ampInvoices": "AMP invoices",
+    "views.ActivityFilter.keysend": "Keysend",
     "views.ActivityToCsv.title": "Download Activity",
     "views.ActivityToCsv.csvDownloaded": "CSV file has been downloaded",
     "views.ActivityToCsv.csvDownloadFailed": "Failed to download CSV file",
