fix : locales unwanted update

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -888,11 +888,10 @@
     "views.ActivityFilter.lightningPayments": "مدفوعات شبكة البرق",
     "views.ActivityFilter.onChainPayments": "المدفوعات على السلسلة",
     "views.ActivityFilter.minimumAmount": "Minimum Amount (sats)",
-    "views.ActivityFilter.inTransit": "المدفوعات قيد التنقل",
-    "views.ActivityFilter.isFailed": "المدفوعات الفاشلة",
-    "views.ActivityFilter.standardInvoices": "الفواتير القياسية",
-    "views.ActivityFilter.ampInvoices": "فواتير AMP",
-    "views.ActivityFilter.keysend": "Keysend",
+    "views.ActivityFilter.inTransit": "In transit payments",
+    "views.ActivityFilter.isFailed": "Failed payments",
+    "views.ActivityFilter.standardInvoices": "Standard invoices",
+    "views.ActivityFilter.ampInvoices": "AMP invoices",
     "views.Routing.RoutingEvent.sourceChannel": "Source Channel",
     "views.Routing.RoutingEvent.destinationChannel": "Destination Channel",
     "views.Olympians.title": "Olympians",
