--- a/locales/de.json
+++ b/locales/de.json
@@ -1020,11 +1020,10 @@
     "views.ActivityFilter.maximumAmountPlaceHolder":"Kein Limit",
     "views.ActivityFilter.memo": "Memo/Notiz",
     "views.ActivityFilter.memoPlaceHolder":"Memo/Notiz eingeben",
-    "views.ActivityFilter.inTransit": "In Transit Zahlungen",
+    "views.ActivityFilter.inTransit": "In Zustellung",
     "views.ActivityFilter.isFailed": "Fehlgeschlagene Zahlungen",
-    "views.ActivityFilter.standardInvoices": "Standard Rechnungen",
-    "views.ActivityFilter.ampInvoices": "AMP Rechnungen",
-    "views.ActivityFilter.keysend": "Keysend",
+    "views.ActivityFilter.standardInvoices": "Standard-Rechnungen",
+    "views.ActivityFilter.ampInvoices": "AMP-Rechnungen",
     "views.ActivityToCsv.title": "Verlauf herunterladen",
     "views.ActivityToCsv.csvDownloaded": "CSV-Datei wurde heruntergeladen",
     "views.ActivityToCsv.csvDownloadFailed": "CSV-Datei konnte nicht heruntergeladen werden",
