--- a/locales/fr.json
+++ b/locales/fr.json
@@ -184,7 +184,7 @@
     "components.SetFeesForm.submit": "Valider Frais",
     "components.UTXOPicker.defaultTitle": "UTXO à utiliser",
     "components.UTXOPicker.selectUTXOs": "Sélectionnez les UTXO à utiliser",
-    "components.QRCodeScanner.noCameraAccess": "Pas d'accès à la caméra",
+    "components.QRCodeScanner.noCameraAccess": "Pas d’accès à la caméra",
     "components.QRCodeScanner.noCameraFound": "Aucun appareil photo trouvé",
     "components.QRCodeScanner.notRecognized": "Le code QR n'a pas pu être reconnu",
     "components.ExternalLinkModal.externalLink": "Vous étes sur le point de fermer Zeus",
@@ -803,7 +803,7 @@
     "views.Settings.Privacy.lurkerMode": "Mode discret",
     "views.Settings.Privacy.lurkerMode.explainer1": "Le mode Lurker masque toutes les valeurs sensibles en les modifiant en caractères grecs anciens.",
     "views.Settings.Privacy.lurkerMode.explainer2": "C'est un excellent moyen de démontrer l'application à quelqu'un sans révéler vos informations sensibles.",
-    "views.Settings.Privacy.lurkerMode.explainer3": "Appuyez longuement sur n'importe quelle valeur masquée pour révéler temporairement les données réelles pendant quelques secondes.",
+    "views.Settings.Privacy.lurkerMode.explainer3": "Appuyez longuement sur n’importe quelle valeur masquée pour révéler temporairement les données réelles pendant quelques secondes.",
     "views.Settings.Privacy.clipboard": "Lire le presse-papiers",
     "views.Settings.Privacy.clipboard.explainer": "S'il est activé, Zeus lira des valeurs copiées dans votre presse-papiers et vous invitera si elles peuvent être utilisées dans l'application.",
     "views.Settings.Privacy.enableMempoolRates": "Activer les suggestions de frais Mempool.space",
@@ -817,7 +817,7 @@
     "views.Settings.SetDuressPassword.deletePassword": "Supprimer le mot de passe de détresse",
     "views.Settings.SetDuressPassword.duressPasswordExplanation": "Une fois défini, vous pouvez saisir votre mot de passe de contrainte sur l'écran de connexion pour supprimer toutes les configurations de votre portefeuille.",
     "views.Settings.SetPin.title": "Définir / modifier le code PIN",
-    "views.Settings.Security.BiometryRequiresPinOrPassword": "Pour activer l'authentification biométrique, vous devez d'abord configurer un code PIN ou un mot de passe comme méthode de sauvegarde.",
+    "views.Settings.Security.BiometryRequiresPinOrPassword": "Pour activer l’authentification biométrique, vous devez d’abord configurer un code PIN ou un mot de passe comme méthode de sauvegarde.",
     "views.Settings.Security.FaceID.title": "FaceID",
     "views.Settings.Security.TouchID.title": "TouchID",
     "views.Settings.Security.Biometrics.title": "Biométrie",
@@ -965,7 +965,7 @@
     "views.Settings.LSP.zeroConfChans": "Canaux 0-Conf",
     "views.Settings.LSP.learn0confConfig": "Apprenez à configurer les canaux 0-Conf et Alias SCIDs",
     "views.Settings.LSP.enableCertificateVerification": "Activer la vérification du certificat",
-    "views.Settings.LSP.flow2": "API et spécifications Flow 2.0",
+    "views.Settings.LSP.flow2": "API et spécifications Flow 2.0",
     "views.Settings.LSP.createWrappedInvoice": "Créer une facture enveloppée",
     "views.Settings.AddContact.name": "Nom",
     "views.Settings.AddContact.description": "Description (max 120)",
@@ -1022,9 +1022,8 @@
     "views.ActivityFilter.memoPlaceHolder":"Entrer un mémo/une note",
     "views.ActivityFilter.inTransit": "Paiements en transit",
     "views.ActivityFilter.isFailed": "Paiements échoués",
-    "views.ActivityFilter.standardInvoices": "Factures standard",
+    "views.ActivityFilter.standardInvoices": "Factures standards",
     "views.ActivityFilter.ampInvoices": "Factures AMP",
-    "views.ActivityFilter.keysend": "Keysend",
     "views.ActivityToCsv.title": "Télécharger l'activité",
     "views.ActivityToCsv.csvDownloaded": "Le fichier CSV a été téléchargé",
     "views.ActivityToCsv.csvDownloadFailed": "Impossible de télécharger le fichier CSV",
@@ -1036,7 +1035,7 @@
     "views.ActivityExport.exportTransactions": "Exporter Transactions",
     "views.ActivityExport.fromDate": "Date de début",
     "views.ActivityExport.toDate": "Date de fin",
-    "views.ActivityExport.dateRange": "Sélectionnez la plage de dates :",
+    "views.ActivityExport.dateRange": "Sélectionnez la plage de dates :",
     "views.ActivityExport.downloadCompleteData": "Télécharger les données complètes",
     "views.ActivityExport.explainerAndroid": "Les fichiers CSV téléchargés peuvent être trouvés dans Fichiers > Téléchargements.",
     "views.ActivityExport.explaineriOS": "Les fichiers CSV téléchargés peuvent être trouvés dans l'application Fichiers sous le dossier ZEUS.",
@@ -1075,7 +1074,7 @@
     "views.LSPS1.pubkeyAndHostNotFound": "La clé publique et l'hôte du nœud ne sont pas définis",
     "views.SyncRecovery.title": "Récupération du portefeuille",
     "views.LSPS1.timeoutError": "Je n'ai pas reçu de réponse du serveur",
-    "views.LSPS1.channelExpiryBlocks": "Blocs d'expiration de canal",
+    "views.LSPS1.channelExpiryBlocks": "Blocs d’expiration de canal",
     "views.LSPS1.maxChannelExpiryBlocks": "Nombre maximal de blocs d'expiration de canal",
     "views.LSPS1.lspBalance": "Solde LSP",
     "views.LSPS1.clientBalance": "Solde client",
@@ -1109,8 +1108,8 @@
     "views.LSPS1.lsps1Spec": "API et spécifications LSPS1",
     "views.LSPS1.lspOrders": "Commandes LSP",
     "views.LSPS1.lsps1Orders": "Commandes LSPS1",
-    "views.LSPS1.noOrdersError": "Aucune commande n'est encore enregistrée !",
-    "views.LSPS1.showingPreviousState": "montrant l'état précédent !",
+    "views.LSPS1.noOrdersError": "Aucune commande n'est encore enregistrée !",
+    "views.LSPS1.showingPreviousState": "montrant l'état précédent !",
     "views.LSPS1.bolt11Payment": "Paiement BOLT 11",
     "views.LSPS1.yourBalance": "Votre solde",
     "views.LSPS1.receiveLimit": "Limite de réception",
@@ -1160,7 +1159,7 @@
     "stores.SettingsStore.lncConnectError": "Échec de la connexion du client LNC au serveur proxy",
     "stores.LSPStore.error": "Erreur LSP",
     "stores.LSPStore.connectionError": "Impossible de se connecter à LSP. Veuillez vérifier vos paramètres LSP ou réessayer plus tard.",
-    "stores.LightningAddressStore.preimageNotFound": "Aucune image préliminaire n'a été trouvée sur votre appareil. Avez-vous récemment changé d'appareil ?",
+    "stores.LightningAddressStore.preimageNotFound": "Aucune image préliminaire n'a été trouvée sur votre appareil. Avez-vous récemment changé d'appareil ?",
     "error.connectionRefused": "Hôte inaccessible. Essayez de redémarrer votre noeud ou son processus Tor.",
     "error.hostUnreachable": "Hôte inaccessible. Essayez de redémarrer votre noeud ou son processus Tor.",
     "error.nodeConnectError": "Impossible de se connecter au nœud. Veuillez vérifier que l'hôte et le port sont corrects et que le service est en cours d'exécution.",
@@ -1169,7 +1168,7 @@
     "error.failureReasonTimeout": "Il y a plus d'itinéraires à essayer, mais le délai d'expiration du paiement a été dépassé.",
     "error.failureReasonNoRoute": "Aucune route trouvée",
     "error.failureReasonError": "Une erreur non récupérable s'est produite",
-    "error.failureReasonIncorrectPaymentDetails": "Paiement échoué : détails de paiement incorrects (hachage de paiement inconnu, montant non valide ou delta CLTV final non valide).",
+    "error.failureReasonIncorrectPaymentDetails": "Paiement échoué : détails de paiement incorrects (hachage de paiement inconnu, montant non valide ou delta CLTV final non valide).",
     "error.failureReasonIncorrectPaymentDetailsKeysend": "Le nœud récepteur peut ne pas accepter les paiements par clés.",
     "error.failureReasonInsufficientBalance": "Solde local insuffisant",
     "error.invalidMacaroon": "Macaron invalide. Veuillez vérifier que vous avez saisi le bon macaron pour ce nœud.",
@@ -1194,7 +1193,7 @@
     "pos.views.Order.printInvoice": "Imprimez la facture",
     "pos.views.Settings.PointOfSale.authWarning": "AVERTISSEMENT: pas de mot de passe ou de punage",
     "pos.views.Settings.PointOfSale.backendWarning": "AVERTISSEMENT: Actuellement, seuls les nœuds LND sont en mesure de marquer les commandes comme payé",
-    "pos.views.Settings.PointOfSale.currencyMustBeEnabledError": "Erreur : la devise doit d'abord être activée",
+    "pos.views.Settings.PointOfSale.currencyMustBeEnabledError": "Erreur : la devise doit d'abord être activée",
     "pos.print.taxReceipt": "Reçu",
     "pos.print.invoice": "Facture",
     "views.Settings.NodeConfiguration.createMainnetWallet": "Créer un portefeuille MainNet",
@@ -1216,7 +1215,7 @@
     "views.Settings.LightningAddress.generatingPreimages": "Générer des préimages",
     "views.Settings.LightningAddress.ChangeAddress": "Changement d'adresse",
     "views.Settings.LightningAddress.nostrKeys.changeWarning": "AVERTISSEMENT: La modification de vos clés Nostr supprimera vos paiements en attente. Veuillez échanger vos paiements en attente avant de soumettre de nouvelles clés.",
-    "views.Settings.LightningAddress.explainer1": "Pour commencer avec une adresse Lightning, vous devez d'abord disposer d'un canal Lightning du LSP ZEUS avec une liquidité entrante.",
+    "views.Settings.LightningAddress.explainer1": "Pour commencer avec une adresse Lightning, vous devez d’abord disposer d’un canal Lightning du LSP ZEUS avec une liquidité entrante.",
     "views.Settings.LightningAddress.explainer2": "Le moyen le plus simple de le faire est d'acheter un canal 0-conf. Générez simplement une facture et payez-vous à partir d'un autre portefeuille Lightning.",
     "views.Settings.LightningAddress.explainer3": "L'achat d'un canal standard vous obligera à attendre plusieurs confirmations en chaîne avant que votre canal soit utilisable.",
     "views.Settings.LightningAddress.get0ConfChan": "Obtenez le canal 0-Conf",
@@ -1260,9 +1259,9 @@
     "views.Settings.CurrencyConverter.error": "Erreur lors de la récupération des taux. Appuyez pour réessayer.",
     "views.LspExplanation.title": "Quels sont ces frais?",
     "views.Settings.CustodialWalletWarning.graph1": "Le portefeuille que vous utilisez est conservateur. Cela signifie que les fonds ici ne sont pas entièrement sous votre contrôle et peuvent être volés par l'opérateur du service.",
-    "views.Settings.CustodialWalletWarning.graph2": "Ce portefeuille s'apparente plus à un compte bancaire qu'à un portefeuille Bitcoin. Vous n'avez pas accès aux clés Bitcoin, mais plutôt à des identifiants révocables à tout moment.",
+    "views.Settings.CustodialWalletWarning.graph2": "Ce portefeuille s’apparente plus à un compte bancaire qu’à un portefeuille Bitcoin. Vous n'avez pas accès aux clés Bitcoin, mais plutôt à des identifiants révocables à tout moment.",
     "views.Settings.CustodialWalletWarning.graph3": "ZEUS a la possibilité de créer un portefeuille auto-dépositaire dans l'application. Ce portefeuille vous fournit une phrase de départ de 24 mots qui vous donne le contrôle total de vos fonds.",
-    "views.Settings.CustodialWalletWarning.graph4": "Pour commencer avec votre propre portefeuille auto-dépositaire, appuyez sur le bouton ci-dessous et cliquez sur le bouton « Créer un portefeuille sur le réseau principal » sur l'écran suivant.",
+    "views.Settings.CustodialWalletWarning.graph4": "Pour commencer avec votre propre portefeuille auto-dépositaire, appuyez sur le bouton ci-dessous et cliquez sur le bouton « Créer un portefeuille sur le réseau principal » sur l'écran suivant.",
     "views.Settings.CustodialWalletWarning.create": "Créer un portefeuille auto-garde",
     "views.Settings.CustodialWalletWarning.dismissWarning": "Ignorer l'avertissement",
     "views.Settings.CustodialWalletWarning.dismissWarningHeader": "Veuillez confirmer les éléments suivants pour ignorer l'avertissement:",
@@ -1332,8 +1331,8 @@
     "views.PSBT.singleFrame": "Cadre unique",
     "views.PSBT.scan": "Scanner PSBT / TX Hex",
     "views.PSBT.finalizePsbtAndBroadcast": "Finaliser le PSBT et la diffusion",
-    "views.PSBT.channelWarning": "NE PUBLIEZ PAS la transaction terminée par vous-même ou avec un autre outil. LND DOIT le publier dans l'ordre approprié des flux de financement, SANS QUE LES FONDS PEUVENT ÊTRE PERDUS ! Assurez-vous de publier dans ZEUS et uniquement lorsque l'ID de chaîne ci-dessus est affiché.",
-    "views.PSBT.channelsWarning": "NE PUBLIEZ PAS la transaction terminée par vous-même ou avec un autre outil. LND DOIT le publier dans l'ordre approprié des flux de financement, SANS QUE LES FONDS PEUVENT ÊTRE PERDUS ! Assurez-vous de publier dans ZEUS et uniquement lorsque les identifiants de chaîne ci-dessus sont affichés.",
+    "views.PSBT.channelWarning": "NE PUBLIEZ PAS la transaction terminée par vous-même ou avec un autre outil. LND DOIT le publier dans l'ordre approprié des flux de financement, SANS QUE LES FONDS PEUVENT ÊTRE PERDUS ! Assurez-vous de publier dans ZEUS et uniquement lorsque l'ID de chaîne ci-dessus est affiché.",
+    "views.PSBT.channelsWarning": "NE PUBLIEZ PAS la transaction terminée par vous-même ou avec un autre outil. LND DOIT le publier dans l'ordre approprié des flux de financement, SANS QUE LES FONDS PEUVENT ÊTRE PERDUS ! Assurez-vous de publier dans ZEUS et uniquement lorsque les identifiants de chaîne ci-dessus sont affichés.",
     "views.PSBT.input": "Entrée",
     "views.PSBT.inputCount": "Nombre d'entrées",
     "views.PSBT.output": "Sortie",
@@ -1363,7 +1362,7 @@
     "time.6mo": "6 mo",
     "time.12mo": "12 mo",
     "time.max": "Max",
-    "components.AlertModal.zeusDetected": "ZEUS a détecté les problèmes suivants :",
+    "components.AlertModal.zeusDetected": "ZEUS a détecté les problèmes suivants :",
     "components.AlertModal.highZombieCount": "Nombre élevé de chaînes zombies",
     "components.AlertModal.zombieExplainer": "Les canaux zombies indiquent des données obsolètes sur votre graphique de réseau téléchargé.",
     "components.AlertModal.resetEGS": "Réinitialiser les données de synchronisation du graphique express",
