Added address picker in message signing using on chain addresses
Added searching and sorting in AddressPicker

Fixed the navigation loop issue and search functionality

--- a/locales/en.json
+++ b/locales/en.json
@@ -49,6 +49,7 @@
     "general.sats": "sats",
     "general.blocks": "blocks",
     "general.search": "Search",
+    "general.noSearchResults": "No search results found",
     "general.help": "Help",
     "general.about": "About",
     "general.unified": "Unified",
@@ -794,13 +795,10 @@
     "views.Settings.SignMessage.success": "Success! This is a valid signature for the inputted message. Pubkey:",
     "views.Settings.SignMessage.error": "Verification failed. Please double check message and signature.",
     "views.Settings.SignMessage.signingMethod": "Signing Method",
-    "views.Settings.SignMessage.lightningNode": "Lightning Node",
-    "views.Settings.SignMessage.onChainAddress": "On-Chain Address",
     "views.Settings.SignMessage.selectAddressSigning": "Select Address for Signing",
     "views.Settings.SignMessage.loadingAddresses": "Loading addresses...",
-    "views.Settings.SignMessage.fullAddress": "Full Address:",
-    "views.Settings.SignMessage.account": "Account:",
-    "views.Settings.SignMessage.addressType": "Address Type:",
+    "views.Settings.SignMessage.fullAddress": "Full Address",
+    "views.Settings.SignMessage.tapToSelectAddress": "Tap here to select an address",
     "views.Settings.SignMessage.noAddressesAvailable": "No on-chain addresses available. Please ensure your node supports address management.",
     "views.Settings.SignMessage.signatureType": "Signature Type",
     "views.Settings.SignMessage.addressRequired": "Address (required for on-chain verification)",
@@ -1607,5 +1605,9 @@
     "views.SwapSettings.customHost": "Enter a custom host",
     "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
-    "androidNotification.shutdown": "Shutdown"
+    "androidNotification.shutdown": "Shutdown",
+    "views.AddressPicker.sortBy.alphabeticalAscending": "Address (A to Z)",
+    "views.AddressPicker.sortBy.alphabeticalDescending": "Address (Z to A)",
+    "views.AddressPicker.sortBy.balanceAscending": "Balance (Low to High)",
+    "views.AddressPicker.sortBy.balanceDescending": "Balance (High to Low)"
 }
