ux: add scan and paste buttons to Receive Ecash view

--- a/locales/en.json
+++ b/locales/en.json
@@ -1428,9 +1428,10 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Balance (descending)",
     "views.OnChainAddresses.createAddress": "Create address",
     "views.OnChainAddresses.changeAddresses": "Change addresses",
-    "views.ReceiveEcash.title": "Receive Ecash",
-    "views.CashuInvoice.title": "Cashu Invoice",
-    "views.CashuPayment.title": "Cashu Payment",
+    "views.Cashu.ReceiveEcash.title": "Receive Ecash",
+    "views.Cashu.ReceiveEcash.readTokenFromClipboard": "Read token from clipboard",
+    "views.Cashu.CashuInvoice.title": "Cashu Invoice",
+    "views.Cashu.CashuPayment.title": "Cashu Payment",
     "cashu.mint": "Mint",
     "cashu.mints": "Mints",
     "cashu.mintUrl": "Mint URL",
@@ -1457,7 +1458,6 @@
     "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
     "views.Cashu.CashuPaymentRequest.sendingFrom": "Sending from",
     "views.Cashu.CashuPaymentRequest.noBalance": "No ecash balance available. Receive a payment first.",
-    "views.Cashu.CashuPayment.title": "Cashu Payment",
     "views.Cashu.CashuPayment.inTransitPayment": "In Transit Cashu Payment",
     "views.Cashu.CashuPayment.failedPayment": "Failed Cashu Payment",
     "views.Cashu.CashuToken.proofCount": "Number of proofs",
